RetainPtr.h should compile with -Wshorten-64-to-32 <http://webkit.org/b/115047>

Reviewed by Anders Carlsson.

Fixes the following warning:

    RetainPtr.h:318:20: error: implicit conversion loses integer precision: 'CFHashCode' (aka 'unsigned long') to 'unsigned int' [-Werror,-Wshorten-64-to-32]
                return CFHash(o.get());
                ~~~~~~ ^~~~~~~~~~~~~~~

* wtf/RetainPtr.h:
(WTF::RetainPtrObjectHash::hash): Cast return value of CFHash()
to unsigned.  This has no effect on 32-bit architectures, but
takes the lower 32-bits of the CFHashCode (unsigned long) on
64-bit architectures, which is what happens implicitly now.


Canonical link: https://commits.webkit.org/133478@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@148979 268f45cc-cd09-0410-ab3c-d52691b4dbfc